hw3.txt
Q1.Why did Brady's patch remove the line "case_long_iso_time_style:"?
Was it necessary to remove that line? Explain.

A: Because 'case_long_iso_time_style' is no longer in need. Since the line
'goto case_long_iso_time_style' is also deleted, there are no other lines
that might call it.
It is unnecessary to remove the line since the rest of the script is not
related to this line. The script will just run normally with this line.

Q2. If your company adopts this patched version of Coreutils instead of
the default one, what else should you watch out for? Might this new version
of Coreutils introduce other problems with your application, perhaps in
countries where users don't speak English and don't understand
English-format dates?

A: We need to pay attention to other programs that might take the output
of ls and assume that it's in the buggy format. The change of format of ls
might influence their outputs, especially for those users who don't
understand English or English-format dates.

Q3. What happens when this script is invoked on an empty file like /dev/null,
and why?

It will output "index error: list index out of range".
Because randline.py functions to choose a random line. However,
the length of the list of content is zero. Thus, it's always out of
range for the script to try to access the selected line since it
does not exist. It's undefined behavior to access the element of
an empty list.

Q4.What happens when this script is invoked with Python 3 rather than
Python 2, and why?

This script could run normally when is invoked with Python 2, but outputs
error message when invoked with Python 3. The error message is:
" except IOError as (errno, strerror):
                       ^
		       SyntaxError: invalid syntax"
It is because of the change of syntax in the two different version. For python
3, the corrct syntax for this line should be "except IOError as err"
